--- a/uhunt/app/src/main/res/layout/activity_main.xml
+++ b/uhunt/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
  * along with uHunt for Android.  If not, see <http://www.gnu.org/licenses/>.
  */
  -->
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -42,4 +42,4 @@
         android:dividerHeight="0dp"
         android:divider="@android:color/transparent"
         android:background="@color/default_color"/>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
