Add about fragment to nav drawer

--- a/uhunt/app/src/main/res/navigation/nav_graph.xml
+++ b/uhunt/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,9 @@
         android:name="org.onlinejudge.uhunt.profile.ProfileFragment"
         android:label="@string/fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/about_dest"
+        android:name="org.onlinejudge.uhunt.about.AboutFragment"
+        android:label="@string/fragment_about"
+        tools:layout="@layout/fragment_about"/>
 </navigation>
