--- a/uhunt/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/uhunt/app/src/main/res/menu/nav_drawer_menu.xml
@@ -4,4 +4,8 @@
         android:id="@id/profile_dest"
         android:title="@string/fragment_profile" />
 
+    <item
+        android:id="@id/about_dest"
+        android:title="@string/fragment_about" />
+
 </menu>
