Add main layout, and data layer for CP Book fragment

--- a/uhunt/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/uhunt/app/src/main/res/menu/nav_drawer_menu.xml
@@ -5,6 +5,10 @@
         android:title="@string/fragment_profile" />
 
     <item
+        android:id="@id/cpbook_dest"
+        android:title="@string/fragment_cpbook" />
+
+    <item
         android:id="@id/about_dest"
         android:title="@string/fragment_about" />
 
