Update Gradle, and Kotlin versions. Update tab selection icon tint mode

--- a/uhunt/app/src/main/res/layout/fragment_cpbook.xml
+++ b/uhunt/app/src/main/res/layout/fragment_cpbook.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="@color/uva_color"
         style="@style/Widget.MaterialComponents.TabLayout.Colored"
-        app:tabIconTint="@null">
+        app:tabIconTintMode="multiply">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
