--- a/uhunt/app/src/main/res/values/colors.xml
+++ b/uhunt/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="default_color">#111</color>
     <color name="uva_color">#c31756</color>
     <color name="colorPrimary">#111111</color>
+    <color name="light_gray">#F7F7F7</color>
 
     <color name="ac">#00AA00</color>
     <color name="pe">#666600</color>
