--- a/uhunt/app/src/main/res/values/colors.xml
+++ b/uhunt/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="default_color">#111</color>
     <color name="uva_color">#c31756</color>
+    <color name="colorPrimary">#111111</color>
+    <color name="light_gray">#F7F7F7</color>
 
     <color name="ac">#00AA00</color>
     <color name="pe">#666600</color>
@@ -11,6 +13,5 @@
     <color name="ce">#AAAA00</color>
     <color name="re">#00AAAA</color>
     <color name="ot">#000000</color>
-    <color name="colorPrimary">#111111</color>
     <color name="white">#ffffff</color>
 </resources>
