--- a/uhunt/app/src/main/res/layout/fragment_problems_category_tab.xml
+++ b/uhunt/app/src/main/res/layout/fragment_problems_category_tab.xml
@@ -38,7 +38,8 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="16sp"
-            android:padding="@dimen/padding_medium"/>
+            android:paddingTop="@dimen/padding_medium"
+            android:paddingBottom="@dimen/padding_medium"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/category1_sub_items"
@@ -54,7 +55,8 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="16sp"
-            android:padding="@dimen/padding_medium"/>
+            android:paddingTop="@dimen/padding_medium"
+            android:paddingBottom="@dimen/padding_medium"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/category2_sub_items"
@@ -70,7 +72,8 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="16sp"
-            android:padding="@dimen/padding_medium"/>
+            android:paddingTop="@dimen/padding_medium"
+            android:paddingBottom="@dimen/padding_medium"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/category3_sub_items"
